--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
   "builds": [{ "src": "*.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "routes": [
+    { "src": "/avatars/(.*)", "dest": "/avatars/$1" },
+    { "src": "/photos/(.*)", "dest": "/photos/$1" },
+    { "src": "/(.*)", "dest": "/" }
+  ]
 }
